[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Speech/SpeechBubble.gd" type="Script" id=1]
[ext_resource path="res://Sound/dialogue_playing.wav" type="AudioStream" id=2]
[ext_resource path="res://UI/Speech/corner.png" type="Texture" id=3]
[ext_resource path="res://UI/Speech/side_down.png" type="Texture" id=4]
[ext_resource path="res://UI/Speech/arrow.png" type="Texture" id=5]
[ext_resource path="res://UI/Speech/side_up.png" type="Texture" id=6]
[ext_resource path="res://UI/Speech/side_left.png" type="Texture" id=7]
[ext_resource path="res://UI/Speech/side_right.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/pixeltype.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
extra_spacing_space = 1
font_data = SubResource( 1 )

[node name="SpeechBubble" type="Node2D"]
script = ExtResource( 1 )

[node name="Origin" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Origin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 36, 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideA" type="TextureRect" parent="Origin"]
margin_top = 14.0
margin_right = 16.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideB" type="TextureRect" parent="Origin"]
margin_left = 14.0
margin_right = 30.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideC" type="TextureRect" parent="Origin"]
margin_left = 14.0
margin_top = 28.0
margin_right = 30.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideD" type="TextureRect" parent="Origin"]
margin_left = 28.0
margin_top = 14.0
margin_right = 44.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerA" type="TextureRect" parent="Origin"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
rect_rotation = 90.0
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerB" type="TextureRect" parent="Origin"]
margin_left = 28.0
margin_right = 44.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
rect_rotation = 180.0
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerC" type="TextureRect" parent="Origin"]
margin_top = 28.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerD" type="TextureRect" parent="Origin"]
margin_left = 28.0
margin_top = 28.0
margin_right = 44.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 16 )
rect_rotation = -90.0
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Origin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 220.0
margin_bottom = 132.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 42.0
margin_right = 40.0
margin_bottom = 58.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="SpeechSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -8.72

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
